120 Health provider search page: fixing spacing issue. (#255)
* updating styling: 120 / healthprovider search / app details page

* minor fixes

* 120 App detail: Health provider search page fix

* adjusting spacing issue with page header and app counter.

* Update: fixed minor change

--- a/packages/app/src/components/pages/Home/styles.css
+++ b/packages/app/src/components/pages/Home/styles.css
@@ -97,3 +97,9 @@
 .decrease-spacing {
   line-height: 2px;
 }
+
+.same-row-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
+}
